order-microservice-rs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-microservice-dep
  labels:
    app: order-microservice
spec:
  # modify replicas according to your case
  replicas: 3
  selector:
    matchLabels:
      app: order-microservice
  template:
    metadata:
      labels:
        app: order-microservice
    spec:
      containers:
      - name: order-microservice
        image: classpathio/order-microservice
        ports:
        - name: http
          containerPort:  8080
          protocol: TCP
        volumeMounts:
        - name: app-config
          mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: order-microservice-cm
      imagePullSecrets:
      - name: docker-credentials
